--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -25,79 +25,13 @@
 .dropdown-footer-border{
 	border-top: 1px solid #efeff1;
 }
-.btn-link{
-	text-decoration: none !important;
-	font-weight: 600;
-	color: #4797de;
+.datepickerDiv{
+	padding-left: 16px;
 }
-.table-sticky{
-	position: relative;
-}
-.table-sticky th{
-	position: -webkit-sticky;
-	position: sticky;
-	z-index: 5;
-	top: -1px;
-}
-.table-filter th{
-	box-shadow: 0 1px 3px 0px #dee2e6;
-}
-.table-filter th{
-	font-weight: 600;
-}
-.card .table-filter td, .card .table-filter th{
-	font-size: 13px;
-}
-.table-filter th span, .table-filter td span{
-	display: block;
-}
-.table-filter th:first-child span, .table-filter td:first-child span{
-	padding-left: 15px;
-	position: relative;
-}
-.table-filter th:first-child span .fa, .table-filter td:first-child span .fa{
-	position: absolute;
-	z-index: 1;
-	top: 4px;
-	left: 0;
-}
-.depth-level-1 td:first-child{
-	padding-left: 28px;
-}
-.depth-level-2 td:first-child{
-	padding-left: 56px;
-}
-.depth-level-3 td:first-child{
-	padding-left: 56px;
-}
-.table-footer{
-	font-size: 12px;
-}
-.table-footer .form-control{
-	min-width: 45px;
-	max-width: 45px;
-	padding: 0 5px;
-	height: 28px;
-}
-.table-footer .btn{
-	height: 28px;
-	line-height: 26px;
-	padding-top: 0;
-	padding-bottom: 0;
-}
-.table-footer .page-link{
-	line-height: 1.05;
-}
-.custom-checkbox .custom-control-input:disabled:checked~.custom-control-label::before{
-	background-color: transparent;
-	border-color: #b8bbbd;
-}
-.custom-checkbox .custom-control-input:disabled:checked~.custom-control-label::after{
-	filter: invert(1);
-	opacity: 0.3;
-}
-.custom-control-input:disabled~.custom-control-label, .custom-control-input[disabled]~.custom-control-label{
-	color: #b8bbbd;
+.nav-tabs{
+	a{
+		cursor: pointer;
+	}
 }
 .pagination{
 	li{
@@ -107,4 +41,10 @@
 .div-disabled{
 	pointer-events: none;
     opacity: 0.5;
+}
+.successStatus{
+	color: #28a745 !important;;
+}
+.failStatus{
+	color: #dc3545 !important;
 }
