--- a/src/styles.less
+++ b/src/styles.less
@@ -1104,9 +1104,6 @@ select{
 	-webkit-box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
 	box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
 }
-.metric_analysis .table-responsive{
-	/*max-height: 50%;*/
-}
 .cb_indigator + .cb_indigator{
 	margin-left: 8px;
 }
@@ -2074,3 +2071,22 @@ td .table-sm input, td .table-sm select, td .table-sm{
 .mat-calendar-body-selected {
     background-color: #009bfa !important;
 }
+//  style changes for slider
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    }
+    
+    ::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #ccc;  
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+    background: #999;  
+    }
