--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -2,7 +2,7 @@
   <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
     <div class="page_access text-right py-2 px-3">
       <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
-      <button class="btn btn-default ml-2" disabled="disabled">Save</button>
+      <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
       <button class="btn btn-primary ml-2" (click)="SubmitForm()">Save & Finish</button>
     </div>
     <!-- /.page_access ml-auto -->
@@ -376,7 +376,7 @@
   
           <div class="p-3 bottom-strp-cover gray-strip text-right">
             <button class="btn btn-default" (click)="cancelForm()">Cancel</button>
-            <button class="btn btn-default ml-2" disabled="disabled">Save</button>
+            <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
             <button class="btn btn-primary ml-2" (click)="SubmitForm()">Save & Finish</button>
           </div>
         </div>
