--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,12 +1,12 @@
 <!-- header of application -->
 <div class="main-topBar d-flex" *ngIf="isAuthenticate">
   <div class="mtb_left ml-auto">
-    <div class="input-group input-group-search">
+    <!-- <div class="input-group input-group-search">
       <input type="text" class="form-control" placeholder="Type to search...">
       <div class="input-group-append">
         <button class="btn" type="button"><i class="fa fa-search"></i></button>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- /.mtb_left -->
   <div class="mtb_right ml-4">
