--- a/src/app/release/release.component.html
+++ b/src/app/release/release.component.html
@@ -75,7 +75,7 @@
                 </div> 
             	<div class="form-group form-inline pull-right">
                   <div class=" mt-auto bg-white position-sticky text-right">
-                        <button class="btn btn-primary" (click)="newReleaseMethod()">New Release</button>
+                        <button class="btn btn-primary" (click)="newReleaseMethod(releaseDataFromParent.appName)">New Release</button>
                       </div>
                 </div>
              
