--- a/src/app/release/release.component.html
+++ b/src/app/release/release.component.html
@@ -66,7 +66,7 @@
                 </table>
               <div class="bottom_btns mt-auto bg-white position-sticky text-right">
                   <button class="btn btn-danger" style="color:#fff;" (click)="cancelRelease()">Cancel</button>
-                &nbsp;&nbsp; <button class="btn btn-primary" (click)="promoteRelease()">Promote</button>
+                &nbsp;&nbsp; <button class="btn btn-primary" [disabled]="promoteStatus" [ngClass]="{'disabled': promoteStatus == true}" (click)="promoteRelease()">Promote</button>
                </div>
           </div>
           <div class="table-responsive" *ngIf="!showRelease">
