created component for dynamic accounts in setting up environment

--- a/src/app/application-onboarding/application-onboarding.component.html
+++ b/src/app/application-onboarding/application-onboarding.component.html
@@ -13,6 +13,9 @@
                         <li class="nav-item disabledMenu">
                             <a class="nav-link">Cloud Services</a>
                         </li>
+                        <li class="nav-item disabledMenu">
+                            <a class="nav-link">Accounts</a>
+                        </li>
                     </ul>
 
                     <div class="tab-content h-100 flex-grow-1">
