Changes related to filters

--- a/src/app/application-onboarding/application-onboarding.component.html
+++ b/src/app/application-onboarding/application-onboarding.component.html
@@ -4,17 +4,17 @@
           <div class="col-sm-12 d-flex flex-column">
             <div class="h-100 d-flex flex-column">
                     <ul class="nav pt-2 bg-white tab-lined nav-tabs" id="myTab" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active">Applications</a>
+                        <li class="nav-item" routerLink="/setup/applications" routerLinkActive="active">
+                            <a class="nav-link">Applications</a>
+                        </li>
+                        <li class="nav-item" routerLink="/setup/accounts" routerLinkActive="active">
+                            <a class="nav-link">Accounts</a>
                         </li>
                         <li class="nav-item disabledMenu">
                             <a class="nav-link">Data Sources</a>
                         </li>
                         <li class="nav-item disabledMenu">
                             <a class="nav-link">Cloud Services</a>
-                        </li>
-                        <li class="nav-item disabledMenu">
-                            <a class="nav-link">Accounts</a>
                         </li>
                     </ul>
 
