--- a/src/app/application-onboarding/application-onboarding.component.less
+++ b/src/app/application-onboarding/application-onboarding.component.less
@@ -53,3 +53,12 @@
 .disabledMenu{
 	opacity: 0.3;
 }
+.nav-tabs{
+	li{
+		cursor: pointer;
+	}
+	.active{
+		border-bottom: 2px solid #00a5ff !important;
+	}
+	
+}
