--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -48,3 +48,13 @@
 .failStatus{
 	color: #dc3545 !important;
 }
+.multiselect-dropdown .dropdown-btn {
+	min-width: 180px;
+	border: 1px solid #ced4da !important;
+	border-radius: .25rem;
+	color: #999 !important;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.filterForm{
+	display: flex;
+}
