--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -53,7 +53,11 @@
 	border: 1px solid #ced4da !important;
 	border-radius: .25rem;
 	color: #999 !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	line-height: 1.2857143 !important;
+	.selected-item{
+		color: white !important;
+	}
 }
 .filterForm{
 	display: flex;
