added refresh button on application page and changes releated to dynamic accounts

--- a/src/app/application-dashboard/application-dashboard.component.less
+++ b/src/app/application-dashboard/application-dashboard.component.less
@@ -336,3 +336,9 @@
 .disabled {
 	cursor: not-allowed;
   }
+.refresh-icon {
+    font-size: 16px;
+    color: #009bfa;
+	padding-left: 10px;
+	cursor: pointer;
+}
