--- a/src/app/application-dashboard/application-dashboard.component.html
+++ b/src/app/application-dashboard/application-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main_content">
   <div class="page_title d-flex align-items-center">
-    <h2>Application Dashboard </h2>
+    <h2>Application Dashboard </h2> <i (click)="getApplications()" class="refresh-icon fa">&#xf021;</i>
     <div class="page_access ml-auto">
       <!-- <button class="btn btn-white"><img src="../../../assets/setting_icon.png" alt="icon" /></button> -->
       <button class="btn btn-primary ml-2" (click)="addNewApplication()" data-backdrop="static" data-keyboard="false"><i
