--- a/src/app/application-onboarding/accounts/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/accounts/dynamic-accounts/dynamic-accounts.component.html
@@ -1,1 +1,60 @@
-<p>dynamic-accounts works!</p>
+<div class="main_content p-0">
+  <div class="page-content">
+    <div class="row no-gutters row-fit-vh">
+      <div class="col-sm-12 d-flex flex-column">
+        <div class="h-100 d-flex flex-column">
+          <div class="tab-content h-100 p-3 flex-grow-1">
+            <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+              <div class="page_access d-flex text-right p-3">
+                <div class="mr-auto">
+                  <div class="input-group input-group_search">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
+                    </div>
+                    <input type="text" class="form-control" />
+                  </div>
+                </div>
+
+                <button class="btn btn-default">New Account</button>
+              </div>
+              <!-- /.page_access ml-auto -->
+              <div class="table-content">
+                <table class="table table-sticky table-striped mb-0">
+                  <thead>
+                    <tr>
+                      <th class="font-weight-bold">Account Name</th>
+					  <th class="font-weight-bold">Type</th>
+					  <th class="font-weight-bold">Namespace</th>
+					  <th class="font-weight-bold">Read Permissions</th>
+					  <th class="font-weight-bold">Write Permissions</th>
+				      <th class="font-weight-bold">Execute Permissions</th>
+					  <th class="font-weight-bold">Action</th>                          
+                      <!-- <th class="font-weight-bold">ACTION</th> -->
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let data of accountListData;let i= index;">
+                        <td>{{data.name}}</td>
+                        <td>{{data.name}}</td>
+                        <td>Kubernetes</td>
+                        <td>{{data.namespaces}}</td>
+                        <td>{{data.permissions.READ.toString()}}</td>
+                        <td>{{data.permissions.WRITE.toString()}}</td>
+                        <td>{{data.permissions.EXECUTE.toString()}}</td>
+                        <td></td>
+                      <!-- <td>
+                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false"  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a>
+                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false" (click)="appDelete(i)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                          </td> -->
+                    </tr>
+                  </tbody>
+                </table> 
+              </div>
+              <!-- /.table-content -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
